@@ -1,4 +1,6 @@
 Development
+	When cancelling a stream (USER_BREAK) and the cancelled one is streaming
+		don't automatically load the next item on the playlist
 	When stream->lastmodified == 0 mark stream as streaming
 		fixes http://www.radioswissclassic.ch/en
 	Various fixes from the mailing list
